syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "StringMetricStateOneOfType";

import "sdc/biceps/stringmetricstate.proto";
import "sdc/biceps/enumstringmetricstate.proto";

message StringMetricStateOneOf {
  oneof string_metric_state_one_of {
    StringMetricState string_metric_state = 1;
    EnumStringMetricState enum_string_metric_state = 2;
  }
}
